--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -48,6 +48,11 @@ footer p {
 .copyright p {
 	font-size: 0.7em;
 }
+
+.email-sub {
+	background: #191313;
+    border-radius: 8px;
+}
 /*fin generales*/
 
 /*menu*/
