--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -130,6 +130,11 @@ footer p {
 	text-align: center;
 }
 
+.destacado-card {
+	background-color: #F1F9FF;
+	padding: 1em;
+}
+
 /*fin destacados*/
 
 /*footer*/
