--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,8 @@
 
 /*Generales*/
-h1, h2, h3, h4, h5, h6, p, .menu_dv li {
+body {
 	font-family: 'Montserrat', sans-serif;
+	margin: 0;
 }
 
 h1, h2, h3, h4 {
@@ -10,10 +11,6 @@ h1, h2, h3, h4 {
 
 a:hover {
 	text-decoration: none;
-}
-
-body {
-	margin: 0;
 }
 
 div {
@@ -67,6 +64,7 @@ footer a {
 	background-color: white;
 	color: black;
 	font-size: 0.9em;
+	border: 2px solid white;
 }
 
 .footer-links h6 {
