--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -165,6 +165,10 @@ footer a {
 	margin: 6em;
 }
 
+.sucursales-general {
+	margin-top: 5em;
+}
+
 .sucursales h1 {
 	color: #707070;
 	letter-spacing: 0.4em;
