correcciones codigo general y comienzo noticias

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -87,6 +87,24 @@ footer a {
     border-radius: 5px;
     font-weight: bold;
 }
+
+.titulo {
+	background-image: url('../images/vd.jpg');
+	background-repeat: no-repeat;
+	background-size: cover;
+	background-position: center;
+	height: 22em;
+	text-align: center;
+}
+
+.titulo h2 {
+	position: relative;
+	top: 5em;
+	color: white;
+	font-weight: bold;
+	letter-spacing: 0.5em;
+}
+
 /*fin generales*/
 
 /*menu*/
@@ -144,22 +162,7 @@ footer a {
 /*fin destacados*/
 
 /*sucursales*/
-.sucursales-titulo {
-	background-image: url('../images/vd.jpg');
-	background-repeat: no-repeat;
-	background-size: cover;
-	background-position: center;
-	height: 22em;
-	text-align: center;
-}
 
-.sucursales-titulo h2 {
-	position: relative;
-	top: 5em;
-	color: white;
-	font-weight: bold;
-	letter-spacing: 0.5em;
-}
 
 .sucursales {
 	margin: 6em;
