--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -224,7 +224,27 @@ footer a {
 	background-repeat: no-repeat;
 	background-size: cover;
 	height: 17em;
+	padding: 0;
 }
 
+.noticias-titulo {
+	position: relative;
+    top: 12em;
+    padding: 0.3em 2em;
+    background-color: rgba(16, 132, 157, 49%);
+}
+
+.noticias-titulo h6, .noticias-titulo p {
+	margin-bottom: 0;
+	color: white;
+}
+
+.noticias-titulo h6 {
+	font-weight: bolder;
+}
+
+.noticias-titulo p {
+	font-size: 0.8em;
+}
 
 /*fin noticias*/
