--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -105,6 +105,35 @@ footer a {
 	letter-spacing: 0.5em;
 }
 
+.overlay {
+	background: rgba(0,0,0,.3);
+	position: fixed;
+	top: 0;
+	bottom: 0;
+	left: 0;
+	right: 0;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+}
+
+.overlay  a {
+	color: #707070;
+}
+
+.overlay  a:hover {
+	color: blue;
+}
+
+.popup {
+	background: #f8f8f8;
+	box-shadow: 0px 0px 5px 0px rgba(0,0,0,.3);
+	color: #707070;
+	border-radius: 3px;
+	padding: 3em;
+	text-align: center;
+}
+
 /*fin generales*/
 
 /*menu*/
