--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -291,8 +291,8 @@ footer a {
 
 /*fin noticias*/
 
-/*contacto*/
-
-
-
-/*fin contacto*/
+/*sistema*/
+.sistema h4 {
+	text-align: center;
+}
+/*fin sistema */
