--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -263,7 +263,7 @@ footer a {
 }
 
 .p-irarrazabal {
-	background-image: url('../images/sucursales/PEUGEOT-IRARRAZABAL.jpg');
+	background-image: url('../images/sucursales/PEUGEOT-IRARRAZABAL.JPG');
 }
 
 .mall-plaza-egana {
