url imagenes sucursales con mayusculas

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -267,15 +267,15 @@ footer a {
 }
 
 .mall-plaza-egana {
-	background-image: url('../images/sucursales/mallegaña.jpg');
+	background-image: url('../images/sucursales/mallegaña.JPG');
 }
 
 .providencia {
-	background-image: url('../images/sucursales/provi.jpg');
+	background-image: url('../images/sucursales/provi.JPG');
 }
 
 .sk-bellavista {
-	background-image: url('../images/sucursales/BELLAVISTA.jpg');
+	background-image: url('../images/sucursales/BELLAVISTA.JPG');
 }
 
 .sucursal-card-title {
