--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -278,6 +278,10 @@ footer a {
 	background-image: url('../images/sucursales/BELLAVISTA.JPG');
 }
 
+.ford-bellavista {
+	background-image: url('../images/sucursales/Ford.JPG');
+}
+
 .sucursal-card-title {
 	background-color: #1193AF;
 	color: white;
