--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -414,3 +414,62 @@ footer a {
 }
 
 /*fin sistema */
+
+/*buscdor*/
+.search-box {
+  width: 19em;
+  transition: width 0.6s, border-radius 0.6s, background 0.6s, box-shadow 0.6s;
+  border-radius: 20px;
+  border: none;
+  cursor: pointer;
+  background: #ebebeb;
+  margin-left: 5.1em;
+
+}
+.search-box + label .search-icon {
+  color: black;
+}
+
+.search-box label {
+	margin-bottom: .5rem; 
+}
+
+.search-box:hover {
+  color: white;
+  background: #c8c8c8;
+  box-shadow: 0 0 0 5px #3d4752;
+}
+.search-box:hover + label .search-icon {
+  color: white;
+}
+.search-box:focus {
+  transition: width 0.6s cubic-bezier(0, 1.22, 0.66, 1.39), border-radius 0.6s, background 0.6s;
+  border: none;
+  outline: none;
+  box-shadow: none;
+  /*padding-left: 15px;*/
+  cursor: text;
+  border-radius: auto;
+  background: #ebebeb;
+  color: black;
+}
+.search-box:focus + label .search-icon {
+  color: black;
+}
+.search-box:not(:focus) {
+  text-indent: -5000px;
+}
+
+#search-submit {
+  position: relative;
+  left: -5000px;
+}
+
+.search-icon {
+  position: relative;
+  left: -30px;
+  color: white;
+  cursor: pointer;
+}
+
+/*fin buscador*/
