--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -493,12 +493,25 @@ footer a {
 
 /*para celulares */ 
 
-@media only screen and (max-width: 600px) {
+@media only screen and (max-width: 812px) {
 	.link-logo {
 		max-width: 50%;
 	}
 
 	.logo {
     max-width: 100%;
+	}
+
+	.navbar-vd-principal{
+		background: white;
+	    position: absolute;
+	    z-index: 1;
+  		top: 6em;
+   		padding: 8em 6em;
+    	left: 0;
+	}
+
+	.menu_dv li {
+		margin-left: 0;
 	}
 }
